# mite_ms

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md
in_silico_biosynthesis/: README.md  pyproject.toml
in_silico_biosynthesis/module/: main.py
mite_descriptive/: README.md  pyproject.toml
mite_descriptive/module/: main.py
mite_descriptive/module/output/: flat_mite.csv  mite_metadata.csv
mite_enzyme_space/: README.md
mite_enzyme_space/module/: main.py  version.json
mite_enzyme_space/module/ncbi_nr/: MITE0000051.xml  MITE0000053.xml  MITE0000076.xml  MITE0000126.xml  MITE0000137.xml  MITE0000146.xml  MITE0000186.xml  MITE0000195.xml  MITE0000204.xml  MITE0000207.xml
mite_enzyme_space/module/output/: mite_ssn_metadata.csv  mite_ssn_seqs.fasta  summary_stats.json
mite_orcid_wordcloud/: README.md  pyproject.toml
mite_orcid_wordcloud/module/: main.py  version.json
mite_ssn/: README.md  pyproject.toml
mite_ssn/module/: main.py
mite_ssn/module/ncbi_nr/: MITE0000001.xml  MITE0000004.xml  MITE0000039.xml  MITE0000052.xml  MITE0000055.xml  MITE0000056.xml  MITE0000087.xml  MITE0000093.xml  MITE0000106.xml  MITE0000113.xml  MITE0000140.xml  MITE0000143.xml  MITE0000159.xml  MITE0000161.xml  MITE0000162.xml  MITE0000165.xml  MITE0000200.xml
mite_ssn/module/output/: boxplot_summary.json  mite_ssn_metadata.csv  mite_ssn_seqs.fasta  summary_stats.json
mite_ssn/results/: cytoscape_session.cys
mite_sunburst/: README.md  pyproject.toml
mite_sunburst/module/: main.py  summary.csv
mite_tmap/: README.md  requirements.txt
mite_tmap/module/: main.py
(+3 files in other folders)
