[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Repository" = "https://github.com/mite-standard/mite_ms"

[project]
name = "module"
version = "0.1.0"
requires-python = ">=3.12"
authors = [
    { name = "Mitja M. Zdouc", email = "zdoucmm@gmail.com" }
]
dependencies = [
    "argparse~=1.4",
    "biopython~=1.85",
    "pandas~=2.2",
    "pydantic~=2.10",
    "requests~=2.32",
    "ruff~=0.5",
]

[project.scripts]
main = "module.main:main"

